# echotap

./: CMakeLists.txt  LICENSE  README.md  a  app  bb  main  main.py  old2  os6  osu2  osu3  osu4  osu5  osu_click  osu_color
assets/shaders/: background.frag
dependencies/glad/include/glad/: gl.h
dependencies/glad/src/: gl.c
help/past_copies/: audio_analyzer.cpp  flicker_sprites.cpp  half.cpp  load_image.cpp  load_image2.cpp  old_renderer.cpp  old_renderer2.cpp  play_song.cpp  render_text.cpp  renderer_works.cpp  ripple_click.cpp  tap_simulation.cpp  v0.cpp
src/: main.cpp
src/audio_manager/: Audio_Manager.cpp  Audio_Manager.h
src/game_session/: Game_Session.cpp  Game_Session.h  context.h
src/generators/: Map_Generator.cpp  Map_Generator.h  detect_beats.cpp  detect_beats.h  filter_beats.cpp  filter_beats.h  next_position.cpp  next_position.h
src/input_manager/: Input_Manager.cpp  Input_Manager.h
src/logical/: Animations.cpp  Animations.h  Beatmap.cpp  Beatmap.h  Prompt.cpp  Prompt.h  Quiz.cpp  Quiz.h  Tap.cpp  Tap.h
src/renderer/: Renderer.cpp  Renderer.h
src/utils/: color.h  shader.cpp  shader.h
